# SoftwareEngineering

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  list.md  techniques.md
HackerRank/: counting_valley.h  get_equal_substrings_within_budgets.h  sales_by_match.h
documents/: Doxyfile
tests/: CMakeLists.txt  main.cpp  test_cases_get_equal_substrings_within_budgets.txt  test_cases_sales_by_match.txt  test_counting_valley.cpp  test_get_equal_substrings_within_budgets.cpp  test_sales_by_match.cpp
